# prover_and_ivs_template

./: .dockerignore  .gitignore  Cargo.toml  DockerfileCP  DockerfileConfidentialProver  DockerfileIVS  DockerfileME  README.md  docker-compose-cp-local.yaml  docker-compose-cp.yaml  docker-compose-ivs-local.yaml  docker-compose-ivs.yaml  docker-compose-me-local.yaml  docker-compose-me.yaml  supervisord-cp.conf  supervisord-me.conf
app/: secp.sec
scripts/: start_cp.sh
